--- a/manifest.plist
+++ b/manifest.plist
@@ -11,19 +11,19 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/caiiiac/SmartBank/raw/master/apps/sBank.ipa</string>
+					<string>http://192.168.1.244:3000/images/sBank.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>display-image</string>
 					<key>url</key>
-					<string>https://github.com/caiiiac/SmartBank/raw/master/images/icon_57.png</string>
+					<string>https://github.com/caiiiac/InstallApp/raw/master/images/icon_57.png</string>
 				</dict>
 				<dict>
 					<key>kind</key>
 					<string>full-size-image</string>
 					<key>url</key>
-					<string>https://github.com/caiiiac/SmartBank/raw/master/images/icon_512.png</string>
+					<string>https://github.com/caiiiac/InstallApp/raw/master/images/icon_512.png</string>
 				</dict>
 			</array>
 			<key>metadata</key>
