--- a/manifest.plist
+++ b/manifest.plist
@@ -35,7 +35,7 @@
 				<key>kind</key>
 				<string>software</string>
 				<key>title</key>
-				<string>SmartBank</string>
+				<string>智慧银行</string>
 			</dict>
 		</dict>
 	</array>
