--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://192.168.1.244:3000/images/sBank.ipa</string>
+					<string>http://192.168.1.244:3000/ipa/sBank.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
